make the app show the translation window on Windows 8 properly; change the hotkey to Left ALT

--- a/SelectAndTranslate.csproj
+++ b/SelectAndTranslate.csproj
@@ -78,6 +78,7 @@
       <DependentUpon>OptionsWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Resources.cs" />
+    <Compile Include="WinAPI\Clipboard.cs" />
     <Compile Include="WinAPI\KeyboardHook.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
